"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

common/commands.c: In DeleteItem() do not crash if an invalid object tag was
   received.
Andreas Kirschbaum 2006-07-16

Fix problem in gtk1 & gtk2 client when player issues disconnect command -
client would hang and consume all CPU time.
---
common/external.h: Add declaration to cleanup_connection()
common/p_cmd.c:  In disconnect command, add call to cleanup_connection()
gtk/gx11.c, gtk-v2/src/main.c: Add cleanup_connection() - removes socket
   from one of the gdk input device, call gtk_main_quit so it returns
   to metaserver selection.
x11/x11.c: Add empty cleanup_connection() - x11 client doesn't need to 
  do anything special.
MSW 2006-07-06

More changes related to default logging.  Able to specify default log level
with configure.  Note:  you will need to re-run configure after this change,
as otherwise MINLOGLEVEL will not be defined in config.h.
---
configure.in, configure:  Add --with-loglevel=<val> to specify default 
    loglevel.
crossfire-client.spec: Update to include --with-loglevel for building RPMs
common/config.h.in: Add MINLOGLEVEL #define.
common/misc.c: Modify to use the MINLOGLEVEL #define
MSW 2006-07-05

Clean up some compile warnings.  They generally fall into either wrong form
for variable (%lld vs %ld), or cast for data (char* vs uint8*)
---
common/client-types.h: Add FMT64 defines like done in the server.  Removes
   need for #ifdef WIN32 in many places.
common/client.c: Remove unneeded cast for ReplyInfoCmd().  Change type
   of length parameter passed to getsockopt() to be a socklen_t.
common/commands.c: Change ReplyInfoCmd() to take a uint8*.  Add several 
  char*/uint8* casts.  Change TickCmd() to also take uint8*
common/external.h: Add extern void client_tick(uint32 tick).
common/image.c: load_image() so that its fourth param (checksum) is a uint32.
    In finish_face_cmd() change filename to be a char*.  Add some casts in