@@ -2,6 +2,7 @@
 Top of CVS tree:
 ------------------------------------------------------------------------------
 
+common/commands.c: Unify/fix calls to LOG().
 common/commands.c: In DeleteItem() do not crash if an invalid object tag was
    received.
 Andreas Kirschbaum 2006-07-16
